<resources>
    <string name="app_name">Infona</string>
    <string name="title_home">Home</string>
    <string name="title_map">Map</string>
    <string name="title_settings">Settings</string>
    <string name="button_atHome">At Home</string>
    <string name="button_public">Public</string>
    <string name="button_school">School</string>
    <string name="button_children">Children</string>
    <string name="button_university">University</string>
    <string name="location_dummy">Hamburg, Germany</string>
    <string name="headline_general">General</string>
    <string name="headline_notifications">Notifications</string>
    <string name="headline_main">Current Regulations</string>
    <string name="information_atHome">-Avoid all unnecessary personal encounters and face-to-face -10 persons who only live in max. 2 households are allowed to gather -Wash your hands regularily -Keep a distance of 1.5 meters to other people</string>
</resources>